cmake_minimum_required(VERSION 3.16)
project(mat)

set(CMAKE_C_STANDARD 11)

add_executable(mat main.cpp)
add_executable(Matrix matrix.c)
add_executable(SizeOne  SizeOne.c)
add_executable(ReversalStr ReversalStr.c)
add_executable(MethodPointer MethodPointer.c)
add_executable(elf elf.c)
add_executable(DoubleLink DoubleLink.c)
add_executable(Mmaping Mmaping.cpp)
add_executable(StringU StringU.c)
add_executable(FileTest FileTest.c)
add_executable(dns dns.c)
add_executable(cplusplus cplusplus/test_1001.cpp cplusplus)
add_executable(test_virtual_method cplusplus/test_virtual_method.cpp)
add_executable(test_virtual cplusplus/test_virtual.cpp)
add_executable(test_paisheng cplusplus/test_paisheng.cpp)
add_executable(test_extend cplusplus/test_extend.cpp)
add_executable(test_constant cplusplus/test_constant.cpp)
add_executable(test_friend cplusplus/test_friend.cpp)
add_executable(test_copy_constructor cplusplus/test_copy_constructor.cpp)
add_executable(test_constructor cplusplus/test_constructor.cpp)
add_executable(test_class cplusplus/test_class.cpp)
add_executable(test_inline cplusplus/test_inline.cpp)
add_executable(test_template cplusplus/test_template.cpp)
add_executable(test_method_value cplusplus/test_method_value.cpp)
add_executable(test_method cplusplus/test_method.cpp)
add_executable(test_while cplusplus/test_while.cpp)
add_executable(test_geshibai cplusplus/test_geshibai.cpp)
add_executable(test_base_type cplusplus/test_base_type.cpp)
add_executable(test_cout cplusplus/test_cout.cpp)
add_executable(ftp ftp/ftp_client.c)