cmake_minimum_required(VERSION 3.16)
project(mat)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
file(GLOB SOURCE *.cpp *.h)
add_executable(mat main.cpp)
add_executable(Matrix matrix.c)
add_executable(SizeOne  SizeOne.c)
add_executable(ReversalStr ReversalStr.c)
add_executable(MethodPointer MethodPointer.c)
add_executable(elf elf.c)
add_executable(DoubleLink DoubleLink.c)
add_executable(Mmaping Mmaping.cpp)
add_executable(StringU StringU.c)
add_executable(FileTest FileTest.c)
add_executable(dns dns.c)
add_executable(cplusplus cplusplus/test_1001.cpp)
add_executable(LruCache cplusplus/LruCache.cpp)
add_executable(offer offer/offer_03.cpp offer/list_node.h)
add_executable(offer_18 offer/offer_18.cpp)
add_executable(offer_06 offer/offer_06.cpp)
add_executable(offer_58_2 offer/offer_58_2.cpp)
add_executable(offer_58_1 offer/offer_58_1.cpp)
add_executable(offer_57_ii offer/offer_57_ii.cpp)
add_executable(offer_59 offer/offer_59.cpp)
add_executable(offer_57 offer/offer_57.cpp)
add_executable(offer_41 offer/offer_41.cpp)
add_executable(offer_31 offer/offer_31.cpp)
add_executable(offer_30 offer/offer_30.cpp)
add_executable(offer_09 offer/offer_09.cpp)
add_executable(offer_50 offer/offer_50.cpp)
add_executable(offer_29 offer/offer_29.cpp)
add_executable(offer_05 offer/offer_05.cpp)
add_executable(offer_04 offer/offer_04.cpp)
add_executable(test_virtual_method cplusplus/test_virtual_method.cpp)
add_executable(test_virtual cplusplus/test_virtual.cpp)
add_executable(test_paisheng cplusplus/test_paisheng.cpp)
add_executable(test_extend cplusplus/test_extend.cpp)
add_executable(test_constant cplusplus/test_constant.cpp)
add_executable(test_friend cplusplus/test_friend.cpp)
add_executable(test_copy_constructor cplusplus/test_copy_constructor.cpp)
add_executable(test_constructor cplusplus/test_constructor.cpp)
add_executable(test_class cplusplus/test_class.cpp)
add_executable(test_inline cplusplus/test_inline.cpp)
add_executable(test_template cplusplus/test_template.cpp)
add_executable(test_method_value cplusplus/test_method_value.cpp)
add_executable(test_method cplusplus/test_method.cpp)
add_executable(test_while cplusplus/test_while.cpp)
add_executable(test_geshibai cplusplus/test_geshibai.cpp)
add_executable(test_base_type cplusplus/test_base_type.cpp)
add_executable(test_cout cplusplus/test_cout.cpp)
add_executable(ftp ftp/ftp_client.c)